test/modules/standard/FileSystem/lydia/isLink/no_such_file_or_dir.good
no_such_file_or_dir.chpl:2: error: No such file or directory in isLink with path "unknown.txt"
