test/modules/standard/FileSystem/lydia/isLink/no_such_file_or_dir.chpl
use FileSystem;
isLink("unknown.txt");
